add proof of concept pdf generation

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,22 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>PDF test</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+        <style>
+html {
+    min-height: 100%;
+    display: flex;
+    justify-content: stretch;
+}
+body {
+    flex-grow: 1;
+}
+iframe {
+    width: 30rem;
+    height: 100%;
+}
+        </style>
         <script src="./main.js" type="module"></script>
     </head>
     <body>
